Ajout des scripts, de l'api et modification du HTML en conséquence

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name="keywords" content="pokemon, pokedex, attaque, défense, type, pokebuild">
         <title>Pokedex</title>
         <link rel="stylesheet" href="styles.css">
-        <script src="script.js"></script>
     </head>
 
     <body>
@@ -19,24 +18,14 @@
             <div id="pokedex">
                 <label for="pokemon-search"></label>
                 <input type="text" id="pokemon-search">
-
-                <div id="pokemon-name"></div>
-
-                <div id="pokemon-types"></div>
-
-                <div id="pokemon-description">
-                    <div id="height-weight"></div>
-                    <div id="description"></div>
+                <div id="pokemon-details"></div>
                 </div>
-
-
-
             </div>
         </main>
 
         <footer>
             <small>Pokédex App. @Fahrenheigt & @Lrigami, 2024</small>
         </footer>
-
+        <script src="script.js"></script>
     </body>
 </html>
