add placeholder for searchbar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>
             <div id="pokedex">
                 <label for="pokemon-search"></label>
-                <input type="text" id="pokemon-search">
+                <input type="text" id="pokemon-search" placeholder="ex.&nbsp;: pikachu">
                 <div id="pokemon-details"></div>
                 </div>
             </div>
