--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
         <header>
-            <h1>Bienvenue dans le Pokédex&nbsp;!</h1>
+            <h1>Cherchez votre pokémon&nbsp;!</h1>
         </header>
 
         <main>
