Ajout de la fonction pour naviguer entre les pokémons lors de la pression des flèches directionnelles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <div id="pokedex">
                 <label for="pokemon-search"></label>
-                <input type="text" id="pokemon-search">
+                <input type="text" id="pokemon-search" placeholder="Pikachu">
                 <div id="pokemon-details"></div>
                 </div>
             </div>
