Mise à jour du titre de la page et ajout de la gestion des flèches directionnelles pour naviguer entre les pokémons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <h1>Bienvenue dans le Pokédexé&nbsp;!</h1>
+            <h1>Cherchez votre pokémon&nbsp;!</h1>
         </header>
 
         <main>
