add navigation buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Pokedex</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="script.js"></script>
     </head>
 
@@ -23,6 +24,8 @@
                 <div id="pokemon-details"></div>
                 </div>
             </div>
+            <button id="previous"><span class="material-icons">chevron_left</span></button>
+            <button id="next"><span class="material-icons">chevron_right</span></button>
         </main>
 
         <footer>
