basic design pokedex

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <main>
             <button id="previous"><span class="material-icons">chevron_left</span></button>
             <div id="pokedex">
-                <label for="pokemon-search"></label>
-                <input type="text" id="pokemon-search" placeholder="ex.&nbsp;: pikachu">
+                <div id="searchbar">
+                    <label for="pokemon-search">Cherchez un pokémon&nbsp;:</label>
+                    <input type="text" id="pokemon-search" placeholder="ex.&nbsp;: pikachu">
+                </div>
                 <div id="pokemon-details"></div>
                 </div>
             </div>
