new data for pokemon heights and weights

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <body>
         <header>
-            <h1>Cherchez votre <img src="pokemon.svg" alt="logo pokémon">&nbsp;!</h1>
+            <h1>Trouvez votre&nbsp;<img src="pokemon.svg" alt="logo pokémon">&nbsp;!</h1>
         </header>
 
         <main>
-            <button id="previous"><span class="material-icons">chevron_left</span></button>
+            
             <div id="pokedex">
                 <div id="searchbar">
                     <label for="pokemon-search">Cherchez un pokémon&nbsp;:</label>
@@ -28,6 +28,7 @@
                 <div id="pokemon-details"></div>
                 </div>
             </div>
+            <button id="previous"><span class="material-icons">chevron_left</span></button>
             <button id="next"><span class="material-icons">chevron_right</span></button>
         </main>
 
