pokedex left header design done

--- a/index-refonte.html
+++ b/index-refonte.html
@@ -21,16 +21,16 @@
             <div id="pokedex">
                 <div id="pokedex-left">
                     <div id="pokedex-left-header">
-                        <div></div> <!-- header -->
-                        <div></div> <!-- carré -->
-                        <div></div> <!-- skew -->
-                        <div> <!-- gros rond -->
-                            <div>
+                        <div id="header-band"></div> <!-- header -->
+                        <div id="header-square"></div> <!-- carré -->
+                        <div id="header-skew"></div> <!-- skew -->
+                        <div id="big-circle"> <!-- gros rond -->
+                            <div id="inner-circle">
                                 <div></div>
                                 <div></div>
                             </div>
                         </div> 
-                        <div> <!-- lights -->
+                        <div id="header-lights"> <!-- lights -->
                             <div></div> <!-- red -->
                             <div></div> <!-- green -->
                             <div></div> <!-- yellow -->
@@ -82,7 +82,9 @@
                         </div>
                     </div>
                 </div>
+
                 <div id="pokedex-transition"></div>
+
                 <div id="pokedex-right">
 
                 </div>
