pokedex left part buttons style done

--- a/index-refonte.html
+++ b/index-refonte.html
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                         <div id="pokedex-left-buttons">
-                            <div>
+                            <div id="pokedex-left-buttons-left">
                                 <div id="pokedex-left-decorative-buttons">
                                     <div></div>
                                     <div></div>
@@ -72,13 +72,13 @@
                                 <input type="text" id="pokemon-searchbar" name="pokemon-searchbar" placeholder="Entrez un pokémon">
                             </div>
                             <div id="travel-buttons"> <!-- display grid -->
-                                <div> <!-- boutons pour passer de l'image du pokemon à la div sprite-taille-poids -->
-                                    <button id="top"></button>
-                                    <button id="bottom"></button>
+                                <div id="top-bottom"> <!-- boutons pour passer de l'image du pokemon à la div sprite-taille-poids -->
+                                    <button id="top"><span class="material-icons">arrow_drop_up</span></button>
+                                    <button id="bottom"><span class="material-icons">arrow_drop_down</span></button>
                                 </div>
-                                <div> <!-- boutons pour passer au pokémon suivant ou précédent -->
-                                    <button id="previous"></button>
-                                    <button id="next"></button>
+                                <div id="next-previous"> <!-- boutons pour passer au pokémon suivant ou précédent -->
+                                    <button id="previous"><span class="material-icons">arrow_left</span></button>
+                                    <button id="next"><span class="material-icons">arrow_right</span></button>
                                 </div>
                             </div>
                         </div>
