--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="pokemon-details"></div>
                 </div>
             </div>
-            <button id="previous"><span class="material-icons">chevron_left</span></button>
+            <button id="previous"><span class="material-icons">arrow_drop_up</span></button>
             <button id="next"><span class="material-icons">chevron_right</span></button>
         </main>
 
