pokedex right header and screen style done

--- a/index-refonte.html
+++ b/index-refonte.html
@@ -21,19 +21,19 @@
             <div id="pokedex">
                 <div id="pokedex-left">
                     <div id="pokedex-left-header">
-                        <div id="header-band"></div> <!-- header -->
-                        <div id="header-square"></div> <!-- carré -->
-                        <div id="header-skew"></div> <!-- skew -->
-                        <div id="big-circle"> <!-- gros rond -->
+                        <div id="header-band"></div> 
+                        <div id="header-square"></div>
+                        <div id="header-skew"></div> 
+                        <div id="big-circle"> 
                             <div id="inner-circle">
                                 <div></div>
                                 <div></div>
                             </div>
                         </div> 
-                        <div id="header-lights"> <!-- lights -->
-                            <div></div> <!-- red -->
-                            <div></div> <!-- green -->
-                            <div></div> <!-- yellow -->
+                        <div id="header-lights"> 
+                            <div></div> 
+                            <div></div> 
+                            <div></div> 
                         </div>
                     </div>
                     <div id="pokedex-left-container">
@@ -88,7 +88,35 @@
                 <div id="pokedex-transition"></div>
 
                 <div id="pokedex-right">
-
+                    <div id="pokedex-right-header">
+                        <div id="header-band-right"></div>
+                        <div id="header-square-right"></div>
+                        <div id="header-skew-right"></div>
+                    </div>
+                    <div id="pokedex-right-container">
+                        <div id="pokemon-screen">
+                            <div id="pokemon-statistics" class="">
+                                <div id="pkm-stats">
+                                    <p><span class="strong"></span><span id="stats-text"></span></p>
+                                </div>
+                                <div id="pkm-strengths">
+                                    <p><span class="strong"></span><span id="strengths-text"></span></p>
+                                </div>
+                                <div id="pkm-weaknesses">
+                                    <p><span class="strong"></span><span id="weaknesses-text"></span></p>
+                                </div>
+                                <div id="pkm-evolution">
+                                    <p><span class="strong"></span><span id="evolution-text"></span></p>
+                                </div>
+                            </div>
+                            <div id="pokemon-search-by-id" class="hidden">
+                                <p>Pokémon n°<span id="entered-id"></span></p>
+                            </div>
+                            <div id="filter-results" class="hidden">
+                                <p><span>N°</span><span>Pokémon</span></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
