--- a/index-refonte.html
+++ b/index-refonte.html
@@ -139,7 +139,7 @@
                             <div id="type-and-buttons">
                                 <div id="type-container">
                                     <div id="main-type"></div>
-                                    <div id="secondary-type" class="hidden"></div>
+                                    <div id="secondary-type" class=""></div>
                                 </div>
                                 <div id="type-container-decorative-buttons">
                                     <div></div>
