--- a/index-refonte.html
+++ b/index-refonte.html
@@ -88,7 +88,10 @@
                     </div>
                 </div>
 
-                <div id="pokedex-transition"></div>
+                <div id="pokedex-transition">
+                    <div></div>
+                    <div></div>
+                </div>
 
                 <div id="pokedex-right">
                     <div id="pokedex-right-header">
