--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div id="pokedex-left-container">
                         <div id="pokedex-pokemon-display">
-                            <div id="red-decorative-buttons"> <!-- two red buttons -->
+                            <div id="red-decorative-buttons">
                                 <div></div>
                                 <div></div>
                             </div>
@@ -59,9 +59,9 @@
                                     <p id="pokemon-id"></p>
                                 </div>
                             </div>
-                            <div id="decorative-button-and-lines"> <!-- rond et trois lignes -->
-                                <div></div> <!-- rond -->
-                                <div></div> <!-- trois lignes = 1 + before + after -->
+                            <div id="decorative-button-and-lines">
+                                <div></div>
+                                <div></div>
                             </div>
                         </div>
                         <div id="pokedex-left-buttons">
