animation on lights

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                             </div>
                         </div> 
                         <div id="header-lights"> 
-                            <div></div> 
-                            <div></div> 
-                            <div></div> 
+                            <div id="red-light"></div> 
+                            <div id="yellow-light"></div> 
+                            <div id="green-light"></div> 
                         </div>
                     </div>
                     <div id="pokedex-left-container">
