debug up and down buttons

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </div>
                             <div id="travel-buttons">
                                 <div id="top-bottom"> <!-- boutons pour passer de l'image du pokemon à la div sprite-taille-poids -->
-                                    <button id="top"><span class="material-icons">arrow_drop_up</span></button>
+                                    <button id="top" class="avoid-clicks"><span class="material-icons">arrow_drop_up</span></button>
                                     <button id="bottom"><span class="material-icons">arrow_drop_down</span></button>
                                 </div>
                                 <div id="next-previous"> <!-- boutons pour passer au pokémon suivant ou précédent -->
