--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                         <div id="header-skew-right"></div>
                     </div>
                     <div id="pokedex-right-container">
+                        <div id="margin-top"></div>
                         <div id="pokemon-screen">
                             <div id="pokemon-statistics" class="">
                                 <div id="pkm-stats">
