--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <div id="type-container-decorative-buttons">
                                     <div></div>
                                     <div></div>
-                                    <div></div>
+                                    <button id="delete-input">X</button>
                                 </div>
                             </div>
                             <div id="filter-buttons">
