--- a/index.html
+++ b/index.html
@@ -150,7 +150,12 @@
                             <div id="filter-buttons">
                                 <button id="filter-by">Filtrer par&nbsp;:</button>
                                 <div id="filters-slider">
-                                    <button><span class="material-icons"></span><span>Type</span><span class="material-icons"></span></button>
+                                    <button><span class="material-icons">arrow_left</span><span>Type</span><span class="material-icons">arrow_right</span></button>
+                                    <button><span class="material-icons">arrow_left</span><span>Attaque</span><span class="material-icons">arrow_right</span></button>
+                                    <button><span class="material-icons">arrow_left</span><span>Défense</span><span class="material-icons">arrow_right</span></button>
+                                    <button><span class="material-icons">arrow_left</span><span>Attaque spé.</span><span class="material-icons">arrow_right</span></button>
+                                    <button><span class="material-icons">arrow_left</span><span>Défense spé.</span><span class="material-icons">arrow_right</span></button>
+                                    <button><span class="material-icons">arrow_left</span><span>Vitesse</span><span class="material-icons">arrow_right</span></button>
                                 </div>
                             </div>
                         </div>
