--- a/index.html
+++ b/index.html
@@ -149,14 +149,16 @@
                             </div>
                             <div id="filter-buttons">
                                 <button id="filter-by">Filtrer par&nbsp;:</button>
+                                <button id="slider-left"><span class="material-icons">arrow_left</span></button>
                                 <div id="filters-slider">
-                                    <button><span class="material-icons">arrow_left</span><span>Type</span><span class="material-icons">arrow_right</span></button>
-                                    <button><span class="material-icons">arrow_left</span><span>Attaque</span><span class="material-icons">arrow_right</span></button>
-                                    <button><span class="material-icons">arrow_left</span><span>Défense</span><span class="material-icons">arrow_right</span></button>
-                                    <button><span class="material-icons">arrow_left</span><span>Attaque spé.</span><span class="material-icons">arrow_right</span></button>
-                                    <button><span class="material-icons">arrow_left</span><span>Défense spé.</span><span class="material-icons">arrow_right</span></button>
-                                    <button><span class="material-icons">arrow_left</span><span>Vitesse</span><span class="material-icons">arrow_right</span></button>
+                                    <button>Type</button>
+                                    <button>Attaque</button>
+                                    <button>Défense</button>
+                                    <button>Attaque spé.</button>
+                                    <button>Défense spé.</button>
+                                    <button>Vitesse</button>
                                 </div>
+                                <button id="slider-right"><span class="material-icons">arrow_right</span></button>
                             </div>
                         </div>
                     </div>
