search pokemon by type and sort pkm by name or ID ok

--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
                                 <button id="filter-by">Filtrer par&nbsp;:</button>
                                 <button id="slider-left"><span class="material-icons">arrow_left</span></button>
                                 <div id="filters-slider">
-                                    <button>Type</button>
-                                    <button>Attaque</button>
-                                    <button>Défense</button>
-                                    <button>Attaque spé.</button>
-                                    <button>Défense spé.</button>
-                                    <button>Vitesse</button>
+                                    <button id="filter-type">Type</button>
+                                    <button id="filter-attack">Attaque</button>
+                                    <button id="filter-defense">Défense</button>
+                                    <button id="filter-attackspe">Attaque spé.</button>
+                                    <button id="filter-defensespe">Défense spé.</button>
+                                    <button id="filter-speed">Vitesse</button>
                                 </div>
                                 <button id="slider-right"><span class="material-icons">arrow_right</span></button>
                             </div>
