add PV filter and correct display bug

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                                 <button id="slider-left"><span class="material-icons">arrow_left</span></button>
                                 <div id="filters-slider">
                                     <button id="filter-type">Type</button>
+                                    <button id="filter-HP">PV</button>
                                     <button id="filter-attack">Attaque</button>
                                     <button id="filter-defense">Défense</button>
                                     <button id="filter-special_attack">Attaque spé.</button>
